# translator

./: Cargo.toml  ac-test.md
src/: domain.rs  infrastructure.rs  lib.rs  main.rs
src/domain/: translator.rs  validator.rs
src/infrastructure/: string_translator.rs  string_validator.rs
