[package]
name = "translator"
version = "0.1.0"
authors = ["shota-tsuji <shotatuzi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mock"]
mock = ["mockall"]

[dependencies]
regex = "1"
mockall = {version = "0.9.1", optional = true}
[dev-dependencies]
mockall = "0.9.1"
